--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "Valdilson Silva",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "yarn": "^1.22.10"
   }
 }
